# CMakeGoogleTestTemplate

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt
